# strands-multi-containers-with-stop-button

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.claude/: settings.local.json
src/: config.py  main.py
src/agent/: agent_core.py  agui_bridge.py
src/api/: chat.py  stop.py
src/schemas/: __init__.py  chat.py  stop.py
src/services/: redis_client.py
static/: README.md  app.js  index.html  package.json
static/assets/styles/: enhanced.css  global.css
static/assets/styles/components/: chat-box.css  controls.css  status.css
static/assets/styles/layouts/: main.css
static/components/: ChatBox.js  ChatControls.js  InfoBox.js  MessageInput.js  StatusIndicator.js
static/services/: ChatService.js  EventStreamHandler.js
static/tests/: README.md  e2e.spec.js  package-lock.json  package.json  playwright.config.js
static/tests/components/: ChatBox.spec.js
static/tests/e2e/: 01-app-loading.spec.js  02-chat-functionality.spec.js  03-stop-functionality.spec.js  04-ui-interactions.spec.js  05-error-handling.spec.js
static/tests/examples/: basic-chat-test.js
static/tests/integration/: chat-flow.spec.js
static/tests/test-results/: .last-run.json  results.json
static/tests/test-results/02-chat-functionality-Core-1685c--receive-streaming-response-mobile/: error-context.md
static/tests/test-results/04-ui-interactions-UI-Comp-144fa--validation-and-auto-resize-chromium/: error-context.md
static/tests/test-results/04-ui-interactions-UI-Comp-144fa--validation-and-auto-resize-mobile/: error-context.md
static/tests/test-results/05-error-handling-Error-Ha-88fd7-ication-state-during-errors-chromium/: error-context.md
static/tests/test-results/05-error-handling-Error-Ha-88fd7-ication-state-during-errors-mobile/: error-context.md
static/tests/test-results/html/: index.html
static/utils/: constants.js  domHelpers.js
